Fixing intro section padding on small screen on homepage

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -3,13 +3,14 @@
 body.home {
 
   .intro-section {
-    padding-bottom: 230px;
+    padding: $padding-sm 0 230px;
 
     > .-inner {
       position: relative;
     }
 
     .section-content {
+      text-align: left;
       padding: $padding-sm $padding-sm 0;
     }
 
